--- a/index.html
+++ b/index.html
@@ -463,6 +463,23 @@
         </div>
     </div>
 
+    <div id="snow-container"></div>
+    <div id="christmas-tree">
+        <div class="star">★</div>
+        <div class="branch b1"></div>
+        <div class="branch b2"></div>
+        <div class="branch b3"></div>
+        <div class="branch b4"></div>
+        <div class="tree-trunk"></div>
+        <div class="garland g1"></div>
+        <div class="garland g2"></div>
+        <div class="garland g3"></div>
+        <div class="garland g4"></div>
+        <div class="garland g5"></div>
+        <div class="garland g6"></div>
+    </div>
     <script src="script.js"></script>
+</body>
+</html>
 </body>
 </html>
