--- a/index.html
+++ b/index.html
@@ -161,13 +161,14 @@
 
     <header class="header">
         <div class="logo"><img src="img/logo.png" alt="Hytale Logo"></div>
-    <nav>
+        <nav>
             <ul>
                 <li><a href="#home">Главная</a></li>
                 <li><a href="#about">Об игре</a></li>
-                <li><a href="#screenshots">Скришоты</a></li>
+                <li><a href="#screenshots">Скриншоты</a></li>
                 <li><a href="#videos">Видео</a></li>
                 <li><a href="#download">Скачать</a></li>
+
             </ul>
         </nav>
     </header>
