--- a/index.html
+++ b/index.html
@@ -465,6 +465,7 @@
     </div>
 
     <div id="snow-container"></div>
+    <div id="fireworks-container"></div>
     <div id="christmas-tree">
         <div class="star">★</div>
         <div class="branch b1"></div>
