--- a/download.html
+++ b/download.html
@@ -157,7 +157,7 @@
             <input type="text" class="captcha-input" id="captcha-input">
             <p class="timer">Капча обновится через: 9 сек</p>
         </div>
-        <a href="/file/l.zip" class="download-btn" id="download-btn">Скачать лаунчер</a>
+            <a href="https://hytalego.github.io/hytalegospb/file/l.zip" class="download-btn" id="download-btn">Скачать лаунчер</a>
     </div>
     <script>
         const captchaInput = document.getElementById('captcha-input');
