--- a/mycontent/index.html
+++ b/mycontent/index.html
@@ -212,18 +212,18 @@
         function checkPassword() {
             const password = document.getElementById('password-input').value;
             const passwords = {
-                'stupid-as-teapot': 'password1',
-                'first-steps': 'password2',
-                'first-emotions': 'password3',
-                'random-mods': 'password4',
-                'community-mods': 'password5',
-                'humor-mods': 'password6',
-                'stupid-teapot': 'password7',
-                'dream-brushes': 'password8',
-                'how-to-get-code': 'help1',
-                'code-duration': 'help2',
-                'free-code': 'help3',
-                'video-leak': 'help4'
+                'stupid-as-teapot': '728-491-365',
+                'first-steps': '159-263-487',
+                'first-emotions': '624-837-951',
+                'random-mods': '473-918-205',
+                'community-mods': '836-192-547',
+                'humor-mods': '295-648-173',
+                'stupid-teapot': '841-926-357',
+                'dream-brushes': '517-384-692',
+                'how-to-get-code': '763-429-185',
+                'code-duration': '946-571-238',
+                'free-code': '382-695-147',
+                'video-leak': '514-827-369'
             };
             const input = document.getElementById('password-input');
             const errorMsg = document.getElementById('error-message');
