--- a/index.html
+++ b/index.html
@@ -114,6 +114,24 @@
             }
         }
 
+        .warning-banner {
+            background-color: red;
+            color: white;
+            text-align: center;
+            padding: 10px;
+            font-weight: bold;
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 1000;
+            font-size: 14px;
+        }
+
+        .header {
+            margin-top: 50px;
+        }
+
         @media (max-width: 768px) {
             .timers-container {
                 top: 100px;
@@ -130,6 +148,7 @@
     </style>
 </head>
 <body>
+    <div class="warning-banner">Осторожно сайт https://hytalegoo.github.io/hytalegospb/ это фейк. Не в ком случаее не переходите на него. все официальные ссылки доступны на https://github.com/hytalego/hytalegospb</div>
     <header class="header">
         <div class="logo"><img src="data/img/logo.png" alt="Hytale Logo"></div>
         <nav>
