--- a/mycontent/index.html
+++ b/mycontent/index.html
@@ -210,13 +210,7 @@
         }
 
         function hash(str) {
-            let hash = 0;
-            for (let i = 0; i < str.length; i++) {
-                const char = str.charCodeAt(i);
-                hash = ((hash << 5) - hash) + char;
-                hash = hash & hash; // Convert to 32bit integer
-            }
-            return hash.toString();
+            return str.replace(/-/g, '');
         }
 
         function checkPassword() {
