--- a/mycontent/index.html
+++ b/mycontent/index.html
@@ -262,12 +262,8 @@
                         <p style="color: #e74c3c;">Наши видео защищены специальными водяными знаками и уникальными идентификаторами.</p>
                     </div>
                     <div class="protection-block">
-                        <h3>🚫 Автоматическое обнаружение</h3>
-                        <p style="color: #f39c12;">Любое копирование или распространение нашего контента на других ресурсах будет автоматически обнаружено и заблокировано.</p>
-                    </div>
-                    <div class="protection-block">
-                        <h3>⚡ Передовые технологии</h3>
-                        <p style="color: #27ae60;">Мы используем передовые технологии защиты авторских прав, которые предотвращают несанкционированное использование материалов.</p>
+                        <h3>🚫 Мониторинг контента</h3>
+                        <p style="color: #f39c12;">Любое копирование или распространение нашего контента на других ресурсах будет рассмотрено и приняты меры.</p>
                     </div>
                     <div class="protection-block">
                         <h3>📢 Сообщите нам</h3>
