--- a/mycontent/index.html
+++ b/mycontent/index.html
@@ -81,8 +81,8 @@
                             <li><button type="button" onclick="showContent('first-steps')">Первые шаги</button></li>
                         </ul>
                     </li>
-                    <li><button type="button" onclick="toggleSubmenu('play-together')">Играем вместе</button>
-                        <ul class="submenu" id="play-together">
+                    <li><button type="button" onclick="toggleSubmenu('letsplay')">Летсплей</button>
+                        <ul class="submenu" id="letsplay">
                             <li><button type="button" onclick="showContent('first-emotions')">Первые эмоции</button></li>
                             <li><button type="button" onclick="showContent('random-mods')">Я прохожу рандомные моды</button></li>
                             <li><button type="button" onclick="showContent('community-mods')">Обзор модов от сообщества</button></li>
@@ -117,8 +117,8 @@
                 <p>Подразделы: "Тупой как чайник" – когда я тупой как чайник и делаю странные абсурдные вещи во время уроков, "Первые шаги" – углубленное изучение базовых концепций. Каждый урок сопровождается примерами и практическими заданиями. 🚀</p>
             </div>
             <div class="section-block">
-                <h3>🎮 Играем вместе</h3>
-                <p>Погрузитесь в захватывающие соло-приключения! В этом разделе я играю один, исследуя мир Hytale в одиночку. Вы увидите мои настоящие эмоции, реакции на неожиданные события, хаос от рандомных модов и искренние обзоры модов от талантливого сообщества. Я делюсь своими чувствами, смехом и удивлением, чтобы вы могли пережить эти моменты вместе со мной. 🎉😄</p>
+                <h3>🎮 Летсплей</h3>
+                <p>В этом разделе я играю в Hytale. Посмотрите мои прохождения, эмоции и обзоры модов от сообщества. Я делюсь своими чувствами и реакциями на игру. 🎉</p>
                 <p>Подразделы: "Первые эмоции" – мои искренние реакции на старт одиночных сессий, "Я прохожу рандомные моды" – непредсказуемые соло-приключения с случайными модификациями, "Обзор модов от сообщества" – анализ лучших творений фанатов глазами одиночки. 🌟</p>
             </div>
             <div class="section-block">
@@ -139,7 +139,7 @@
                 <iframe src="https://rutube.ru/embed/example2" allowfullscreen></iframe>
             </div>
             <div id="first-emotions" class="video-content">
-                <h2>Играем вместе - первые эмоции</h2>
+                <h2>Летсплей - первые эмоции</h2>
                 <div class="video-panels">
                     <div class="video-panel">
                         <iframe src="https://rutube.ru/embed/example3a" allowfullscreen></iframe>
@@ -168,7 +168,7 @@
                 </div>
             </div>
             <div id="random-mods" class="video-content">
-                <h2>Играем вместе - Я проходу рандомные моды</h2>
+                <h2>Летсплей - Я прохожу рандомные моды</h2>
                 <div class="video-panels">
                     <div class="video-panel">
                         <iframe src="https://rutube.ru/embed/example4a" allowfullscreen></iframe>
@@ -197,7 +197,7 @@
                 </div>
             </div>
             <div id="community-mods" class="video-content">
-                <h2>Играем вместе - Обзор модов от сообщества</h2>
+                <h2>Летсплей - Обзор модов от сообщества</h2>
                 <div class="video-panels">
                     <div class="video-panel">
                         <iframe src="https://rutube.ru/embed/example5a" allowfullscreen></iframe>
