--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         </nav>
         <div id="release-timer" class="timer release-timer">
             <div>До выхода игры осталось:</div>
-            <div><span id="release-days"></span>д <span id="release-hours"></span>ч <span id="release-minutes"></span>м <span id="release-seconds"></span>с</div>
+            <div><span id="release-days"></span>:<span id="release-hours"></span>:<span id="release-minutes"></span>:<span id="release-seconds"></span></div>
         </div>
     </header>
 
