--- a/index.html
+++ b/index.html
@@ -473,6 +473,7 @@
 
 
     <div id="snow-container"></div>
+    <script src="glitches.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
